# dnsrs

./: .gitignore  Cargo.toml  Makefile  README.md  bench.txt  build.rs  dns_generated.rs  dns_minimal_generated.rs
.cargo/: config.toml
.kiro/specs/planet-scale-dns-server/: design.md  requirements.md  tasks.md
crates/dns-api/: Cargo.toml  README.md
crates/dns-api/examples/: api_demo.rs
crates/dns-api/src/: auth.rs  error.rs  handlers.rs  lib.rs  metrics.rs  models.rs  routes.rs
crates/dns-api/tests/: integration_tests.rs
crates/dns-cluster/: Cargo.toml
crates/dns-cluster/src/: consensus.rs  discovery.rs  hash_ring.rs  health.rs  lib.rs  manager.rs  network.rs  replication.rs
crates/dns-cluster/tests/: integration_test.rs
crates/dns-core/: Cargo.toml
crates/dns-core/src/: atomic.rs  blocklist.rs  error.rs  hash.rs  lib.rs  metrics.rs  query.rs  resolver.rs  router.rs  tests.rs  types.rs
crates/dns-core/src/atomic/: tests.rs
crates/dns-core/tests/: integration_test.rs
crates/dns-monitoring/: Cargo.toml
crates/dns-monitoring/benches/: metrics_bench.rs
crates/dns-monitoring/src/: alerts.rs  analytics.rs  config.rs  health.rs  lib.rs  logging.rs  profiling.rs  prometheus.rs  server.rs  tracing.rs
crates/dns-monitoring/tests/: integration_tests.rs
crates/dns-protocol/: Cargo.toml  build.rs
crates/dns-protocol/src/: handlers.rs  lib.rs  packet.rs  parser.rs  records.rs  response.rs  tests.rs  validation.rs
crates/dns-security/: Cargo.toml  README.md
crates/dns-security/benches/: rate_limiting.rs
crates/dns-security/examples/: security_demo.rs
crates/dns-security/src/: access_control.rs  audit_log.rs  ddos_protection.rs  dnssec.rs  dnssec_processor.rs  dnssec_tests.rs  error.rs  key_management.rs  lib.rs  nsec_chain.rs  packet_validation.rs  rate_limiter.rs  tests.rs  tsig_auth.rs
crates/dns-server/: Cargo.toml
crates/dns-server/src/: config.rs  lib.rs  main.rs  server.rs
crates/dns-storage/: Cargo.toml
crates/dns-storage/src/: backup.rs  cache.rs  disk.rs  index.rs  lib.rs  memory.rs  multi_level_cache.rs  storage_engine.rs  version_log.rs  zone.rs
examples/: config.toml  optimized_zero_copy.rs  zero_copy_demo.rs
schemas/: dns.fbs  dns.fbs.backup  dns_minimal.fbs
