[package]
name = "dns-monitoring"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Workspace dependencies
dns-core = { path = "../dns-core" }

# Async runtime
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
bytes.workspace = true

# HTTP server for metrics and health endpoints
hyper.workspace = true

# Prometheus metrics
prometheus.workspace = true

# Distributed tracing
tracing.workspace = true
tracing-subscriber.workspace = true
opentelemetry = "0.27"
opentelemetry-otlp = "0.27"
opentelemetry_sdk = "0.27"
tracing-opentelemetry = "0.28"

# Structured logging
serde_json = "1.0"

# Performance profiling
pprof = { version = "0.14", features = ["flamegraph", "protobuf-codec"] }

# System metrics
sysinfo = "0.32"

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# Configuration
toml.workspace = true

# HTTP client for webhooks
reqwest.workspace = true

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true

[[bench]]
name = "metrics_bench"
harness = false