[package]
name = "dns-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "DNS protocol implementation with zero-copy parsing"

[dependencies]
dns-core = { path = "../dns-core" }
tokio.workspace = true
flatbuffers.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
bincode = "1.3"

[build-dependencies]
flatbuffers = "25.2"

[features]
default = []
doh = ["hyper"]
dot = ["rustls"]
doq = ["quinn"]

[dependencies.hyper]
workspace = true
optional = true

[dependencies.rustls]
workspace = true
optional = true

[dependencies.quinn]
workspace = true
optional = true