[package]
name = "dns-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "DNS protocol implementation with zero-copy parsing"

[dependencies]
dns-core = { path = "../dns-core" }
tokio.workspace = true
flatbuffers.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
bincode = "1.3"
async-trait = "0.1"
socket2 = "0.5"
base64 = { version = "0.22", optional = true }

# Optional dependencies for different protocols
hyper = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
tokio-rustls = { version = "0.24", optional = true }
rustls-pemfile = { version = "1.0", optional = true }
quinn = { workspace = true, optional = true }

[build-dependencies]
flatbuffers = "25.2"

[features]
default = []
doh = ["hyper", "base64"]
dot = ["rustls", "tokio-rustls", "rustls-pemfile"]
doq = ["quinn", "rustls", "rustls-pemfile"]