[package]
name = "dns-security"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
bytes = "1.0"
lockfree = "0.5"
ring = "0.17"
base64 = "0.22"
ipnet = "2.9"
bloom = "0.3"
ahash = "0.8"
parking_lot = "0.12"
crossbeam = "0.8"
atomic = "0.6"
async-trait = "0.1"
bincode = "1.3"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
tempfile = "3.8"
tracing-subscriber = "0.3"

[[bench]]
name = "rate_limiting"
harness = false