[package]
name = "dns-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Main DNS server binary"

[[bin]]
name = "planet-dns"
path = "src/main.rs"

[dependencies]
dns-core = { path = "../dns-core" }
dns-protocol = { path = "../dns-protocol", features = ["doh", "dot"] }
dns-storage = { path = "../dns-storage" }
dns-cluster = { path = "../dns-cluster" }
dns-api = { path = "../dns-api" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
toml.workspace = true
serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[features]
default = ["doh", "dot"]
doh = ["dns-protocol/doh"]
dot = ["dns-protocol/dot"]
doq = ["dns-protocol/doq"]
web-ui = ["dns-api/web-ui"]
simd = ["dns-core/simd"]