[package]
name = "dns-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Zero-copy storage engine with FlatBuffers and memory mapping"

[dependencies]
dns-core = { path = "../dns-core" }
tokio.workspace = true
flatbuffers.workspace = true
bytes.workspace = true
lockfree.workspace = true
memmap2.workspace = true
thiserror.workspace = true
tracing.workspace = true
ahash.workspace = true
serde = { workspace = true, features = ["derive"] }
bincode.workspace = true

[features]
default = []
compression = ["lz4"]
simd = ["wide"]

[dependencies.wide]
workspace = true
optional = true

[dependencies.lz4]
version = "1.24"
optional = true

[dev-dependencies]
tempfile = "3.8"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
dns-protocol = { path = "../dns-protocol" }

[[example]]
name = "zero_copy_demo"
path = "../../examples/zero_copy_demo.rs"

[[example]]
name = "performance_comparison"
path = "../../examples/performance_comparison.rs"

[[example]]
name = "optimized_zero_copy"
path = "../../examples/optimized_zero_copy.rs"